# pi-test

./: .gitignore  AGENTS.md  README.md
backend/: .gitignore  pyproject.toml
backend/src/: __init__.py
backend/src/api/: __init__.py  main.py
backend/src/api/v1/: calculate.py  history.py  routes.py
backend/src/application/: __init__.py  calc_service.py  history_service.py
backend/src/domain/: __init__.py  exceptions.py  models.py
backend/src/infrastructure/: __init__.py  cache.py
docs/: CONTEXT.md
docs/2-areas/adr/: 0001-para-method.md
docs/2-areas/para-method/: para-method.md
docs/agents/: domain.md
frontend/: .gitignore  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/entities/: __init__.py
frontend/src/features/calculator/: __init__.py  index.ts  model.ts  store.ts
frontend/src/shared/: index.ts
frontend/src/shared/ui/: Button.tsx  Display.tsx
frontend/src/widgets/: __init__.py
frontend/src/widgets/CalculatorLayout/: index.tsx
